Improve design and embed gratar image in profile page when social share is done

--- a/views/index.jade
+++ b/views/index.jade
@@ -100,6 +100,7 @@ block content
             li <a href="//github.com/BGuimberteau" title="Benjamin">Benjamin Guimberteau</a> for hosting the service
             li <a href="//blacktie.co" title="BlackTie">BlackTie.co</a> for the free theme
             li <a href="//iconsdb.com/" title="BlackTie">IconsDB</a> for their amazing icons
+            li And <strong>eveyone</strong> who send me feedbacks !
       .col-md-6.col-md-offset-2.col-sm-12.text-center
         h2 About the author
         .mt
