--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -79,6 +79,10 @@ hr {
     margin-top: 40px;
     margin-bottom: 40px;
 }
+.mt-xs {
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
 .form-control {
     height: 42px;
     font-size: 18px;
