Add form registration into landing page

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -83,10 +83,9 @@ hr {
     margin-top: 20px;
     margin-bottom: 20px;
 }
-.form-control {
-    height: 42px;
-    font-size: 18px;
-    width: 280px;
+.mt-xxs {
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 i {
     margin: 8px;
@@ -137,4 +136,7 @@ i {
 }
 .margin-left-xs {
     margin-left: 10px;
+}
+.min-width-120 {
+    min-width: 120px;
 }
