--- a/views/layout.jade
+++ b/views/layout.jade
@@ -38,7 +38,7 @@ html
       ga('create', 'UA-49426829-1', 'gravaco.in');
       ga('send', 'pageview');
 
-  body
+  body(ng-app="app", ng-controller="IndexCtrl")
     script(src='/zeroclipboard/ZeroClipboard.min.js')
     script(src='/angular/angular.min.js')
     script(src='/angular/angular-resource.min.js')
