--- a/views/profile.jade
+++ b/views/profile.jade
@@ -3,7 +3,7 @@ extends layout
 block header
   script(src='/javascripts/profile.js')
 
-  .container.push--top.profil-page(ng-app="app", ng-controller="CurrencyCtrl")
+  .container.push--top.profil-page
     .row
       .pull-right
         a.btn.btn-success(data-toggle="modal", data-target="#myModal")
