Improve landing instructions

--- a/views/index.jade
+++ b/views/index.jade
@@ -81,20 +81,16 @@ block content
               input.form-control(type="text", id="inputAddress", placeholder="e.g: DHuFoMUNkXUxeRgvKyUNQkS7vHYmMBgwH4", ng-model="new_address.address")
 
             button.btn.btn-success.btn-lg(type="submit") Submit !
-      .col-lg-12
-        h3 Validate this address
-
-        .well.well-lg
-          p Click on the link sent in the email or copy/paste it on your browser.
 
       .col-lg-12
-        h3 Visit your profile
+        h3.text-center Visit your profile
 
-        .well.well-lg
+        .well.mt
           code.col-md-6 http://www.gravaco.in/HASH
           p.col-md-6.
-            Your profile is then available at the following url
+            Once you follow the instruction given in the email, your profile becomes available at the following url
             where HASH is your encrypted email (md5)
+            Or you can try the <a href="/search">search page</a>.
           .clearfix &nbsp;
 
       h3.text-center Feel free to <a href="http://github.com/jorge-d/gravacoin", title="Go to repository", target="blank">contribute</a>.
