--- a/views/index.jade
+++ b/views/index.jade
@@ -10,7 +10,7 @@ block header
             | Gravacoin is a free open-source <em>service</em> to share your <br/>
             | <strong>{{currency}}</strong> address with the world.
       .row.mt
-        a.button.btn.btn-success.btn-lg(href='#documentation') How does it work?
+        a.button.btn.btn-success.btn-lg(href='#how_it_works') How does it work?
 
 block content
   .container#get_started
@@ -73,7 +73,9 @@ block content
 
     .row.mt.centered.text-center
       h3 Share your profile link or embed a badge pointing to your profile anywere !
-      .mt
+      .row.mt
+        a.button.btn.btn-primary(href='/458641ed4b2725b16edbf0192ca0b2f2', target="_blank") Example profile page
+      .row
         .col-lg-4.col-lg-offset-1.col-md-4.col-xs-12
           a.text-right(href="/458641ed4b2725b16edbf0192ca0b2f2", target="_blank")
             img(src="/ltc/458641ed4b2725b16edbf0192ca0b2f2.png", alt="See profile page")
