--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,6 +8,7 @@ html
     meta(name='keyword', content='Bitcoin Dogecoin Litecoin open-source Feathercoin Github addresse-book cryptocurrency')
     meta(name='application-name', content='Gravacoin')
     meta(name='author', content='Dimitri Jorge')
+
     meta(property="og:title", content="Gravacoin")
     meta(property="og:type", content="article")
     meta(property="og:image", content="#{gravatar_url || 'http://gravaco.in/images/dogecoin-main.png'}")
@@ -17,7 +18,7 @@ html
     meta(name="twitter:card", content="summary")
     meta(name="twitter:title", content="Gravacoin")
     meta(name="twitter:description", content="Gravacoin is a tool to share your crypto-addresses with the world!")
-    meta(name="twitter:image", content="#{'gravatar_url || http://gravaco.in/images/dogecoin-main.png'}")
+    meta(name="twitter:image", content="#{gravatar_url || 'http://gravaco.in/images/dogecoin-main.png'}")
 
     title Gravacoin
 
