Add button to with gravatar link in profil page

--- a/views/profile.jade
+++ b/views/profile.jade
@@ -20,6 +20,10 @@ block header
           span.glyphicon.glyphicon-share-alt
       .col-md-8.col-md-offset-2.col-xs-12.text-center
         img.img-circle(src=gravatar_url, width='140', alt='', ng-init="hash='#{hash}';")
+        br
+        a.btn.btn-xs.btn-info(href="http://gravatar.com", title="Change your profile picture using Gravatar", target="blank")
+          span Gravacoin uses Gravatar
+          span.glyphicon.glyphicon-cog
     .row.mt
       .col-md-8.col-md-offset-2
         h2.text-center Addresses
