Change in homepage

--- a/views/index.jade
+++ b/views/index.jade
@@ -104,9 +104,15 @@ block content
         .row.mt
           ul.list-unstyled
             li <a href="//github.com/BGuimberteau" title="Benjamin">Benjamin Guimberteau</a> for hosting the service
+            li <a href="//github.com/Unitech" title="Alexandre">Alexandre Strzelewicz</a> for his <a href="//github.com/Unitech/pm2" title="pm2">process manager</a>
             li <a href="//blacktie.co" title="BlackTie">BlackTie.co</a> for the free theme
-            li <a href="//iconsdb.com/" title="BlackTie">IconsDB</a> for their amazing icons
+            li <a href="//iconsdb.com/" title="IconsDB">IconsDB</a> for their amazing icons
             li And <strong>eveyone</strong> who send me feedbacks !
+
+        a.twitter-follow-button(href="https://twitter.com/Gravacoin", data-show-count="false", data-size="large") Follow @Gravacoin
+        script.
+          !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
+
       .col-md-6.col-md-offset-2.col-sm-12.text-center
         h2 About the author
         .mt
