--- a/views/index.jade
+++ b/views/index.jade
@@ -24,7 +24,7 @@ block content
             .alert.alert-danger(ng-if="error_response")
               p {{error_response}}
             .alert.alert-success(ng-if="success_response")
-              p Success ! You will receive an email shortly with a like to activate your registered address.
+              p Success ! You will receive an email shortly with a link to activate your registered address.
 
             .input-group.input-group-lg.mt-xxs(class="{{error.currency}}")
               .input-group-addon.min-width-120
