--- a/views/profile.jade
+++ b/views/profile.jade
@@ -22,10 +22,6 @@ block header
           span.glyphicon.glyphicon-share-alt
       .col-md-8.col-md-offset-2.col-xs-12.text-center
         img.img-circle(src=gravatar_url, width='140', alt='', ng-init="hash='#{hash}';")
-        br
-        a.btn.btn-xs.btn-info(href="http://gravatar.com", title="Change your profile picture using Gravatar", target="blank")
-          span Gravacoin uses Gravatar
-          span.glyphicon.glyphicon-cog
     .row.mt
       .col-md-8.col-md-offset-2
         h2.text-center Addresses
@@ -53,11 +49,12 @@ block header
             span.small Copy
             span.glyphicon.glyphicon-link
             span.glyphicon.glyphicon-ok.hidden
-    .row.mt.text-center
+    .row.text-center
       ul.list-unstyled.list-inline
         li <a href="https://twitter.com/share" class="twitter-share-button" data-text="Wanna tip me some coins? Check out my #Gravacoin profile!" data-size="normal" data-count="none">Tweet</a>
         li.facebook-share <div class="fb-share-button" data-href="http://gravaco.in/{{hash}}" data-type="button"></div>
     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+    p.mt-xs.text-center.small This is your profile? Change/Create your profile picture on <a href="http://gravatar.com/#{hash}" title="Change your profile picture on Gravatar" target="blank">Gravatar</a>.
 
     .modal.fade#myModal
       .modal-dialog
