Add privacy policy to index

--- a/views/index.jade
+++ b/views/index.jade
@@ -135,6 +135,8 @@ block content
               a(href="http://linkedin.com/pub/dimitri-jorge/5b/919/4b7/")
                 img(src="/images/linkedin-3-32.png", alt="Github")
 
+  .text-center
+    <a href="//www.iubenda.com/privacy-policy/551533" class="iubenda-white iubenda-embed" title="Privacy Policy">Privacy Policy</a><script type="text/javascript">(function (w,d) {var loader = function () {var s = d.createElement("script"), tag = d.getElementsByTagName("script")[0]; s.src = "//cdn.iubenda.com/iubenda.js"; tag.parentNode.insertBefore(s,tag);}; if(w.addEventListener){w.addEventListener("load", loader, false);}else if(w.attachEvent){w.attachEvent("onload", loader);}else{w.onload = loader;}})(window, document);</script>
   .container
     hr
     row.centered
