Use nice shadow on profile page

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -124,6 +124,10 @@ i {
     .glyphicon {
         margin-left: 10px;
     }
+
+    .img-circle {
+        box-shadow: rgba(0, 0, 0, 0.8) 0 0 20px;
+    }
 }
 
 .margin-bottom-xs {
